--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
 }
 
-/* Center the text over the image. */
 .hero-text {
     text-align: center;
     position: absolute;
@@ -27,19 +26,17 @@ h1, h2, h3, h4, h5, h6 {
     transform: translate(-50%, -50%);
     color: white;
 }
-/*style the navbar*/
+
 #navbar {
     overflow: hidden;
     background-color: #ff0000;
 }
 
-/* Navbar links */
 #navbar a {
     float: left;
     display: block;
     color: #f2f2f2;
     font-family: 'Koulen', cursive;
-    /* font-family rule copied from Google Fonts */
     text-align: center;
     padding: 14px;
     text-decoration: none;
@@ -63,7 +60,6 @@ h1, h2, h3, h4, h5, h6 {
 div.stuff {
     width: 250px;
     height:400px;
-    /* height: fit-content; */
     word-wrap: break-word;
     overflow: auto;
     text-align: left;
@@ -78,7 +74,6 @@ div.stuff {
 div.stuff2 {
     width: 325px;
     height:450px;
-    /* height: fit-content; */
     word-wrap: break-word;
     overflow: auto;
     text-align: left;
@@ -93,7 +88,6 @@ div.stuff2 {
 div.stuff3 {
     width: 400px;
     height:300px;
-    /* height: fit-content; */
     word-wrap: break-word;
     overflow: auto;
     text-align: left;
@@ -109,7 +103,6 @@ div.stuff4 {
     width: 1780px;
     height:200px;
     font-size: 23px;
-    /* height: fit-content; */
     word-wrap: break-word;
     overflow: auto;
     text-align: left;
@@ -119,6 +112,53 @@ div.stuff4 {
     float: left;
     margin: 10px;
     padding: 20px;
+}
+
+div.stuff5 {
+    width: 390px;
+    height:450px;
+    word-wrap: break-word;
+    overflow: auto;
+    text-align: left;
+    border-width: 10px;
+    border-style: inset;
+    border-color: rgb(165, 0, 0);
+    float: left;
+    margin: 10px;
+    padding: 20px;
+}
+
+div.contactp {
+    height: 600px;
+    background: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+div.contactc {
+    background-color: #6D0404;
+    width: 700px;
+    height: 500px;
+}
+
+.contacttext {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: x-large;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+.contacttext2 {
+    text-align: center;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    font-size: x-large;
+    transform: translate(-50%, -50%);
+    color: white;
 }
 
 div#section {
